# rentamovie

./: .gitignore  Dockerfile  LICENSE  README.md  dev.sh  pyproject.toml  tdd.sh  test.db  tryout.sh
src/rentamovie/: __init__.py  authentication.py  main.py  models.py  serializers.py
tests/: test_rentamovie.py
